feat: add a user menu on navigation
